<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".genres">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4161FF"
            android:id="@+id/toolBar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/s_genresInfo"
            android:textSize="15pt"
            android:background="@color/green"
            android:textColor="@color/red"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_song_id"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/s_song_id"
            android:padding="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:enabled="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_song_name"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/s_song_name"
            android:padding="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:id="@+id/edtNameGenres"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_btnADD"
            android:id="@+id/btnAddGenres"
            android:layout_weight="1" />



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_btnUpdate"
            android:id="@+id/btnUpdateGenres"
            android:layout_weight="1" />

    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvGenres"/>

</LinearLayout>
